Merge the development branch to springboot3 feat(update): implement real-time update progress tracking with SSE and enhance update process fix(release): update zip file naming convention for frontend distribution feat(startup): enhance startup banner and initialization summary with detailed metrics feat: update version to 3.5.5 in application.yml and pom.xml